<resources>
    <string name="app_name">Kanban</string>

    <string name="tabs_screenreader">Tabs</string>
    <string name="exit_button_screenreader">Sair</string>
    <string name="text_splash_icon_screenreader">Ícone de Splash</string>
    <string name="text_add_task_screenreader">Adicionar tarefa</string>

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <string name="email_empty">Preencha seu e-mail!</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="text_message_warning">Mensagem</string>
    <string name="password_text">Senha</string>
    <string name="email_text">E-mail</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, tente novamente mais tarde.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_list_task_empty">
        Nenhuma tarefa cadastrada!
    </string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações!</string>
    <string name="text_delete_success_task">Tarefa removida com sucesso.</string>

    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa.</string>
    <string name="text_button_dialog_confirm">Confirmar</string>

    <string name="text_toolbar_update_form_task_fragment">
        Editando tarefa…
    </string>
    <string name="text_update_sucess_form_task_fragment">
        Tarefa atualizada com sucesso!
    </string>

    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>

    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_user_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta</string>

    <string name="text_info_recover_account_fragment">Informe seu e-mail de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>
    <string name="text_message_recover_account_fragment">Um e-mail foi enviado para recuperar a senha.</string>

    <string name="text_title_form_task_fragment">Adicionar tarefa</string>
    <string name="text_edit_description_form_task_fragment">Descrição</string>
    <string name="hint_edit_description_form_task_fragment">Informe sua nova tarefa</string>
    <string name="text_edit_status_form_task_fragment">Status</string>
    <string name="text_button_save_form_task_fragment">Salvar</string>
    <string name="description_empty_form_task_fragment">Preencha uma descrição.</string>
    <string name="text_save_success_form_task_fragment">Tarefa salva com sucesso!</string>

    <string name="screenreader_anterior">Anterior</string>
    <string name="screenreader_proximo">Próximo</string>
    <string name="remove_task_button">Remover</string>
    <string name="edit_text_button">Editar</string>
    <string name="details_task_button">Detalhes</string>

</resources>