<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_warning"
        android:textAlignment="center"
        android:textColor="@color/color_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider" />

    <TextView
        android:id="@+id/textviewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_message_warning"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:text="@string/text_button_warning"
        android:textColor="@color/white"
        app:backgroundTint="@color/color_default" />

</LinearLayout>