<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Criar layout da tela de login do app" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/screenreader_anterior"
            app:layout_constraintEnd_toStartOf="@id/buttonDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonEditar"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/color_default" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bg_btn"
            android:text="@string/remove_task_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/color_delete"
            app:layout_constraintEnd_toStartOf="@+id/buttonEditar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonEditar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEditar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/edit_text_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/color_default"
            app:layout_constraintEnd_toStartOf="@+id/buttonDetails"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDelete"
            app:layout_constraintTop_toBottomOf="@id/textDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDetails"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bg_btn"
            android:text="@string/details_task_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@color/color_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonEditar"
            app:layout_constraintTop_toTopOf="@id/buttonEditar" />

        <ImageButton
            android:id="@+id/buttonForward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/screenreader_proximo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonDetails"
            app:layout_constraintTop_toTopOf="@id/buttonEditar"
            app:srcCompat="@drawable/ic_back_inverted"
            app:tint="@color/color_default" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
